Wed Feb  6 19:44:23 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * tao/Storable_FlatFileStream.h:

          Added missing versioned namespace declaration.

Wed Feb  6 19:12:01 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * tao/AnyTypeCode/TypeCode_CDR_Extraction.cpp:

          Removed unnecessary ACE_TEXT_ALWAYS_CHAR wrappers.

Wed Feb  6 17:10:17 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/Naming_Service/FT_Naming_Service.mpc:
        * orbsvcs/Naming_Service/Naming_Service.mpc:

          Split out FT_Naming_Service project to its own file
          so that the Naming Service can be built and not
          the FT version.

Wed Feb  6 15:42:25 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * MPC/config/ft_naming_serv.mpb:

          Added dependency on portablegroup.

        * orbsvcs/Naming_Service/Naming_Service.mpc:

          Moved avoids to correct project. Should have been on FT_Naming_Service.

        * tao/Storable_File_Guard.cpp:

          Removed unused exception variable.

Wed Feb  6 14:57:44 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * bin/tao_other_tests.lst:

        * orbsvcs/tests/ImplRepo/scale_clients:
        * orbsvcs/tests/ImplRepo/scale_clients/README:
        * orbsvcs/tests/ImplRepo/scale_clients/Test.idl:
        * orbsvcs/tests/ImplRepo/scale_clients/Test_i.h:
        * orbsvcs/tests/ImplRepo/scale_clients/Test_i.cpp:
        * orbsvcs/tests/ImplRepo/scale_clients/client.cpp:
        * orbsvcs/tests/ImplRepo/scale_clients/run_test.pl:
        * orbsvcs/tests/ImplRepo/scale_clients/scale_clients.mpc:
        * orbsvcs/tests/ImplRepo/scale_clients/server.cpp:

          Added a test that spawns multiple clients making requests to a
          single server. As described in the README, this is useful for
          showing how numerous clients waiting to forward requests to a
          server being pinged by the ImplRepo can cause deep recursion that